--- a/IndividualJava/pom.xml
+++ b/IndividualJava/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>spetch.school</groupId>
-    <artifactId>ATM</artifactId>
+    <artifactId>IndividualJava</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
